# Real-Time-Rendering

./: .gitignore  .graphifyignore  CLAUDE.md  next.md  previously.md
Cours/: .gitignore  _quarto.yml  cours.qmd  index.qmd  references.bib  styles.css
Cours/chapitres/: chapitre1.qmd  chapitre2.qmd  chapitre3.qmd
TD/correction/: CMakeLists.txt
TD/correction/shaders/TP1/: addition.comp  boxfilter.comp  multiply.comp
TD/correction/shaders/TP2/: cube.vert  cube2.vert  triangle.frag  triangle.vert  triangle2.vert
TD/correction/shaders/TP3/: obj.frag  objNormal.vert  perFaceNormal.vert  perVertexNormal.vert
TD/correction/shaders/TP4/: obj_mip.frag  obj_nrm.frag  obj_nrm.vert  obj_tex.frag
TD/correction/shaders/TP5/: displacement.frag  displacement.vert  nrm.frag  nrm.vert
TD/correction/src/TP1/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/correction/src/TP2/: exercice1.cpp  exercice2.cpp  exercice3.cpp  exercice4.cpp
TD/correction/src/TP3/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/correction/src/TP4/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/correction/src/TP5/: exercice1.cpp  exercice2.cpp
TD/correction/src/utils/: MipmapHelper.hpp  ObjLoader.hpp  Scene.hpp
TD/sujets/: CMakeLists.txt  TP1.md  TP2.md  TP3.md  TP4.md  TP5.md  TP6.md  TP7.md  TP8.md  TP9.md
TD/sujets/shaders/TP1/: addition.comp  boxfilter.comp  multiply.comp
TD/sujets/shaders/TP2/: cube.vert  cube2.vert  triangle2.vert
TD/sujets/shaders/TP3/: obj.frag  objNormal.vert  perFaceNormal.vert  perVertexNormal.vert
TD/sujets/shaders/TP4/: obj_mip.frag  obj_mip.vert  obj_nrm.frag  obj_nrm.vert  obj_tex.frag  obj_tex.vert
TD/sujets/shaders/TP5/: displacement.frag  displacement.vert  nrm.frag  nrm.vert  parallax.frag  parallax.vert
TD/sujets/src/TP1/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/sujets/src/TP2/: exercice1.cpp  exercice2.cpp  exercice3.cpp  exercice4.cpp
TD/sujets/src/TP3/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/sujets/src/TP4/: exercice1.cpp  exercice2.cpp  exercice3.cpp
TD/sujets/src/TP5/: exercice1.cpp
TD/sujets/src/utils/: ObjLoader.hpp  TextureLoader.hpp
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
